trying to solve overflow issue

--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ a:hover{
     margin: 0;
 }
 
+.hidden-overflow{
+    overflow-x: hidden;
+}
+
 /* ------------- Utility Classes --------------  */
 
 
